[package]
name = "crossword-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
actix-web = "4"
# actix-cors = "0.6.2"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.3.0"
futures = "0.3"
chrono = "0.4.22"
# argon2 = "0.5.2"
# jsonwebtoken = "8"
# actix-web-httpauth = "0.8.1"